2011-01-18  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        REGRESSION: A problem with Voiceover and finding links
        https://bugs.webkit.org/show_bug.cgi?id=52324

        Fallout from recent change to make WebCore return its own scroll view.
           1) There were two scroll views in the hierarchy, one which no needed to be ignored.
           2) Hit tests for sub frames needed to be offset.
           3) The check for whether an attachment is ignored must happen earlier than using
              the helpText to determine if an element should be ignored.

        Test: platform/mac/accessibility/iframe-with-title-correct-hierarchy.html

        * accessibility/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::elementAccessibilityHitTest):
        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::accessibilityIsIgnored):
        * accessibility/mac/AccessibilityObjectWrapper.mm:
        (-[AccessibilityObjectWrapper scrollViewParent]):

2011-01-18  Adam Roben  <aroben@apple.com>

        Call alternate CFHTTPCookie functions if available

        Fixes <http://webkit.org/b/52637> <rdar://problem/8878984>.

        Reviewed by Darin Adler.

        * platform/network/cf/CookieJarCFNet.cpp: Added soft-linking macros to
        pull in the alternate CFHTTPCookie functions.

        (WebCore::cookieDomain):
        (WebCore::cookieExpirationTime):
        (WebCore::cookieName):
        (WebCore::cookiePath):
        (WebCore::cookieValue):
        Added these wrappers around the CFHTTPCookie functions. We call the
        alternate functions if they exist, otherwise fall back to the current
        functions.

        (WebCore::filterCookies):
        (WebCore::getRawCookies):
        (WebCore::deleteCookie):
        Changed to use the wrapper functions.

2011-01-18  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Eric Seidel.
