@@ -132,7 +132,7 @@ public:
     virtual void cancelGeolocationPermissionRequestForFrame(WebCore::Frame*, WebCore::Geolocation*);
     virtual void runOpenPanel(WebCore::Frame*, PassRefPtr<WebCore::FileChooser>);
     virtual void chooseIconForFiles(const Vector<WTF::String>&, WebCore::FileChooser*);
-    virtual void setCursor(const WebCore::Cursor&) { }
+    virtual void setCursor(const WebCore::Cursor&);
     virtual void formStateDidChange(const WebCore::Node*);
     virtual PassOwnPtr<WebCore::HTMLParserQuirks> createHTMLParserQuirks() { return 0; }
 #if ENABLE(TOUCH_EVENTS)
@@ -167,8 +167,7 @@ public:
     virtual void postAccessibilityNotification(WebCore::AccessibilityObject*, WebCore::AXObjectCache::AXNotification);
 
     // ChromeClientImpl:
-    void setCursor(const WebCursorInfo& cursor);
-    void setCursorForPlugin(const WebCursorInfo& cursor);
+    void setCursorForPlugin(const WebCursorInfo&);
 
     virtual bool selectItemWritingDirectionIsNatural();
     virtual PassRefPtr<WebCore::PopupMenu> createPopupMenu(WebCore::PopupMenuClient*) const;
@@ -180,6 +179,7 @@ public:
 
 private:
     void getPopupMenuInfo(WebCore::PopupContainer*, WebPopupMenuInfo*);
+    void setCursor(const WebCursorInfo&);
 
     WebViewImpl* m_webView;  // weak pointer
     bool m_toolbarsVisible;
